<resources>

<!--    -->
    <string name="app_name">RecyclerView</string>
    <string name="full_name">Full Name</string>
    <string name="profession">Profession</string>
    <string name="career">Career</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
<!--    -->
    <string name="acquainted">Let\'s get acquainted</string>
    <string name="fillOut">Fill out the profile and go to the application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="remember_me">Remember me</string>
    <string name="google">GOOGLE</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">REGISTER</string>
    <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="home_address">Home address</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">invalid password</string>
    <string name="logout">Logout</string>
    <string name="find_contact_button_scope">Find contact button scope</string>


    <string name="deletedContact">%s has been removed.</string>


</resources>